Got a working rooms/messages app. Work in Progress - missing all the tests.

--- a/app/views/chat/chat.html
+++ b/app/views/chat/chat.html
@@ -1,3 +1,6 @@
 <div ng-controller="mainCtrl as ctrl">
     Hello, {{ctrl.userState.username}}!
 </div>
+<waffle-rooms></waffle-rooms>
+<waffle-messages></waffle-messages>
+<waffle-message-box></waffle-message-box>
