--- a/app/views/login/login.html
+++ b/app/views/login/login.html
@@ -1,4 +1,4 @@
-<form ng-controller="loginCtrl as ctrl" ng-submit="ctrl.login()">
+<form ng-submit="ctrl.login()">
     <input type="text" ng-model="ctrl.user.username" />
     <input type="submit" value="Login"/>
 </form>
