Got a working rooms/messages app. Work in Progress - missing all the tests.

--- a/app/views/chat/chat.html
+++ b/app/views/chat/chat.html
@@ -1,6 +1,7 @@
-<div ng-controller="mainCtrl as ctrl">
-    Hello, {{ctrl.userState.username}}!
+<div class="chat">
+    <waffle-rooms></waffle-rooms>
+    <div class="room">
+        <waffle-messages></waffle-messages>
+        <waffle-message-box></waffle-message-box>
+    </div>
 </div>
-<waffle-rooms></waffle-rooms>
-<waffle-messages></waffle-messages>
-<waffle-message-box></waffle-message-box>
