--- a/app/app.css
+++ b/app/app.css
@@ -1,30 +1,61 @@
 /* app css stylesheet */
-
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+* {
+    box-sizing: border-box;
 }
 
-.menu:before {
-  content: "[";
+html,body {
+    height: 100%;
 }
 
-.menu:after {
-  content: "]";
+.content {
+    width: 100%;
+    height: 100%;
 }
 
-.menu > li {
-  display: inline;
+.chat {
+    width: 100%;
+    height: 100%;
+    display: flex;
 }
 
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
+.room-list {
+    height: 100%;
+    background-color: #eef;
+    padding: 16px;
+    min-width: 200px;
+    width: 20%;
+    max-width: 400px;
 }
 
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+.room {
+    height: 100%;
+    background-color: #fee;
+    padding: 16px;
+    flex-grow: 1;
+
+    display: flex;
+    flex-direction: column;
 }
+
+.messages {
+    width: 100%;
+    flex-grow: 1;
+    overflow-y: auto;
+}
+
+.message-box {
+    width: 100%;
+    display: flex;
+}
+
+    .message-box__input {
+        height: 50px;
+        font-family: Arial, sans-serif;
+
+        flex-grow: 1;
+    }
+
+    .message-box__submit {
+        height: 50px;
+        width: 150px;
+    }
