--- a/app/views/chat/message-list.html
+++ b/app/views/chat/message-list.html
@@ -1,8 +1,10 @@
 <div class="messages">
     Messages
-    <ul>
-        <li ng-repeat="message in ctrl.data.messages">
-            {{ message.username }} &mdash; {{ message.text }}
+    <ul class="messages__list">
+        <li ng-repeat="message in ctrl.data.messages" class="message">
+            <span class="message__time">{{ message.timestamp | date:'HH:mm:ss' }}</span>
+            <span class="message__user">{{ message.username }}</span>
+            <span class="message__text">{{ message.text }}</span>
         </li>
     </ul>
 </div>
