Adding rooms WIP

--- a/app/views/chat/chat.html
+++ b/app/views/chat/chat.html
@@ -1,5 +1,5 @@
 <div class="chat">
-    <waffle-rooms></waffle-rooms>
+    <waffle-room-list></waffle-room-list>
     <div class="room">
         <waffle-messages></waffle-messages>
         <waffle-message-box></waffle-message-box>
