--- a/scss/blocks/_room-list.scss
+++ b/scss/blocks/_room-list.scss
@@ -6,3 +6,23 @@
 	width: 20%;
 	max-width: 400px;
 }
+
+.room-list__group-title {
+	font-weight: bold;
+	margin-bottom: 4px;
+}
+
+.room-list__rooms {
+	margin-bottom: 16px;
+	font-size: 12px;
+	line-height: 14px;
+}
+
+.room-list__room {
+	padding: 4px 8px;
+	cursor: pointer;
+
+	&:hover {
+		background-color: rgba(#fff, 0.4);
+	}
+}
