--- a/app/views/chat/message-list.html
+++ b/app/views/chat/message-list.html
@@ -4,7 +4,7 @@
         <li ng-repeat="message in ctrl.data.messages" class="message">
             <span class="message__time">{{ message.timestamp | date:'HH:mm:ss' }}</span>
             <span class="message__user">{{ message.username }}</span>
-            <span class="message__text">{{ message.text }}</span>
+            <span class="message__text" ng-bind-html="message.text | htmlEscape:true"></span>
         </li>
     </ul>
 </div>
